--- a/04_team/scss/04_components/_icon.scss
+++ b/04_team/scss/04_components/_icon.scss
@@ -2,8 +2,8 @@
 .fixedIcon {
   display: block;
   position: fixed;
-  bottom: 8vh;
-  right: 1.5vw;
+  bottom: 14.5vh;
+  right: 4.9vw;
   z-index: 15;
 }
 
